appId: com.headlamp.uno.stage

--- 
- launchApp:
   appId: com.headlamp.uno.stage
   clearState: true
   clearKeychain: true
   stopApp: false
   permissions:
    all: allow
- waitForAnimationToEnd
   
- assertNoDefectsWithAI
- tapOn: already-have-account


- tapOn: "email"
- inputText: "testrigor.1@yopmail.com"
- tapOn: "password"
- inputText: "Headlamp@123"
- tapOn:
    text: "Sign In"
    index: 0
- tapOn:
    id: "sign-in-button-testid"
- assertNoDefectsWithAI

- runFlow:
   when:
    visible: Records ready notification
   commands:
    - tapOn: CONTINUE
    - waitForAnimationToEnd:
        timeout: 5000
    - assertVisible: Congratulations
    - tapOn: CONTINUE    
- runFlow:
    when:
      visible: "Higher power level = better insights"
    commands:
      - tapOn:
         point: 50%,47%
      - waitForAnimationToEnd:
          timeout: 5000 
- runFlow:
   when:
      visible: SUGGEST ACTIVITIES FOR ME 
   commands:
      - tapOn: SUGGEST ACTIVITIES FOR ME
      - waitForAnimationToEnd:
         timeout: 9000 
      - tapOn: ACCEPT ACTIVITIES
      - tapOn: CONTINUE
      - tapOn: CONTINUE
- tapOn:
    id: button

- tapOn:
    id: button

- tapOn:
    id: button

- tapOn:
    id: button
- assertNoDefectsWithAI
- runFlow:
   when:
      visible: skip for now
   commands:
      - tapOn:
          text: skip for now
      - waitForAnimationToEnd:
          timeout: 9000    
- runFlow:
   when:
      visible: your insights data has been converted and simplified to match 
   commands:
      - assertVisible : GOT IT
      - tapOn:
          text: GOT IT
      - waitForAnimationToEnd:
          timeout: 9000  
- runFlow:
   when:
      visible: we've updated our Hypothesis to be even more personalized
   commands:
      - assertVisible : GOT IT
      - tapOn:
          text: GOT IT
      - waitForAnimationToEnd:
          timeout: 9000                             
   


- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Mood check-in
    direction: DOWN

- tapOn: Mood check-in
-  runFlow:
        when:
            visible:
                text: "Got IT"
        commands:
            - tapOn: 
               text:  "Got IT"   

- tapOn:
    id: slider-track-mark
    index: 0
- waitForAnimationToEnd
- tapOn:
    id: slider-track-mark
    index: 7
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- waitForAnimationToEnd
- tapOn:
    id: "submit-button"
- tapOn:
    id: "Scared-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Worried-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Anxious-chip"
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- tapOn:
    id: "Education-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Family-chip"
- tapOn:
    id: "submit-button"

- tapOn:
    id: "Financial Struggles-chip"
- waitForAnimationToEnd
- tapOn:
    id:  "Performance Pressures-chip"
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- waitForAnimationToEnd
- tapOn:
    id: "More"
    index: 0
- tapOn:
    id: My typical
    index: 0 
- waitForAnimationToEnd

- tapOn:
    id:  Less
    index: 1
- waitForAnimationToEnd

- tapOn:
    id:  More
    index: 2
- waitForAnimationToEnd
- tapOn: "CONTINUE"
- waitForAnimationToEnd
# if mood logging is done



- runFlow:
    when:
      visible:
         text: "Great job logging again today!"
    commands:
      - assertVisible: "While personalized hypotheses and suggestions are currently shared just once per day, each mood log helps refine your profile for even more tailored insights in the future."
      - tapOn: 
          text : "VIEW PREVIOUS SUGGESTIONS"
          retryTapIfNoChange: false
      - waitForAnimationToEnd
      -  runFlow:
          when:
            visible:
             text: "Got IT"
          commands:
            - tapOn: 
               text:  "Got IT"     
      - waitForAnimationToEnd

      - assertVisible : insights       
      - assertVisible: "Personalized content to help you build awareness and understanding around how you feel. Continue logging your mood for more tailored suggestions."  
- assertNoDefectsWithAI

- waitForAnimationToEnd
- runFlow:
    when:
      visible:
         text: "Reminders"
    commands:
        - scroll
        # skip
        - tapOn:
            id: "button"
            index: 1
        - waitForAnimationToEnd

        - assertVisible : Generating personal insights based on your power level
        - waitForAnimationToEnd
            # continue button
        - assertNoDefectsWithAI
        - tapOn:
            id: "button"
        - assertNoDefectsWithAI
        - assertVisible: Hypothesis
        - assertVisible: "Why you might be feeling "
        - assertNoDefectsWithAI

        - tapOn:
            id: "button"

        - assertVisible: Suggestions
        - assertVisible: "Content"
        - assertNoDefectsWithAI
        - tapOn:
            id: "button"
- runFlow:
    when:
      visible:
         text: "Generating personal insights based on your power level"
    commands:

        - assertVisible : Generating personal insights based on your power level
        - waitForAnimationToEnd
            # continue button
        - assertNoDefectsWithAI
        - tapOn:
            id: "button"
        - assertNoDefectsWithAI

        - assertVisible: Hypothesis
        - assertNoDefectsWithAI

        - tapOn:
            id: "button"

        - assertVisible: Suggestions
        - assertVisible: "Content"
        - assertNoDefectsWithAI
        - tapOn:
            id: "button"
- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Mood check-in
    direction: DOWN

- tapOn: Mood check-in
- tapOn:
    id: slider-track-mark
    index: 0
- waitForAnimationToEnd
- tapOn:
    id: slider-track-mark
    index: 7
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- waitForAnimationToEnd
- tapOn:
    id: "submit-button"
- tapOn:
    id: "Scared-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Worried-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Anxious-chip"
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- tapOn:
    id: "Education-chip"
- waitForAnimationToEnd
- tapOn:
    id: "Family-chip"
- tapOn:
    id: "submit-button"

- tapOn:
    id: "Financial Struggles-chip"
- waitForAnimationToEnd
- tapOn:
    id:  "Performance Pressures-chip"
- waitForAnimationToEnd
- tapOn:
    id: "submit-button"

- waitForAnimationToEnd
- tapOn:
    id: "More"
    index: 0
- tapOn:
    id: My typical
    index: 0 
- waitForAnimationToEnd

- tapOn:
    id:  Less
    index: 1
- waitForAnimationToEnd

- tapOn:
    id:  More
    index: 2
- waitForAnimationToEnd
- tapOn: "CONTINUE"
- waitForAnimationToEnd
# if mood logging is done



- runFlow:
    when:
      visible:
         text: "Great job logging again today!"
    commands:
      - assertVisible: "While personalized hypotheses and suggestions are currently shared just once per day, each mood log helps refine your profile for even more tailored insights in the future."
      - tapOn: 
          text : "VIEW PREVIOUS SUGGESTIONS"
          retryTapIfNoChange: false
      - waitForAnimationToEnd
      -  runFlow:
          when:
            visible:
             text: "Got IT"
          commands:
            - tapOn: 
               text:  "Got IT"     
      - waitForAnimationToEnd

      - assertVisible : insights       
      - assertVisible: "Personalized content to help you build awareness and understanding around how you feel. Continue logging your mood for more tailored suggestions."  
- assertNoDefectsWithAI